syntax = "proto3";

package bb8.apps.content;

service ContentInfo {
  rpc PersonalRecommend (RecommendRequest) returns (EntriesList) {}
  rpc Trending (TrendingRequest) returns (EntriesList) {}
  rpc Search (SearchRequest) returns (EntriesList) {}
  rpc GetContent (GetContentRequest) returns (EntryContent) {}
  rpc GetPicture (GetPictureRequest) returns (PictureContent) {}
  rpc GetKeywords (GetKeywordsRequest) returns (KeywordsContent) {}
  rpc GetRelatedKeywords (GetRelatedKeywordsRequest) returns (KeywordsContent) {}
}

message Entry {
  string title = 1;
  string description = 2;
  string link = 3;
  string source = 4;
  string image_url = 5;
}

message EntriesList {
  repeated Entry entries = 1;
}

message SearchRequest {
  uint32 user_id = 1;
  string query = 2;
  uint32 count = 3;
}

message TrendingRequest {
  uint32 user_id = 1;
  string source_name = 2;
  uint32 count = 3;
}

message RecommendRequest {
  uint32 user_id = 1;
  uint32 count = 2;
}

message GetContentRequest {
  string entry_link = 1;
  int32 char_offset = 2;
  uint32 limit = 3;
}

message GetPictureRequest {
  string entry_link = 1;
  int32 pic_index = 2;
}

message GetKeywordsRequest {
  uint32 limit = 1;
}

message GetRelatedKeywordsRequest {
  string name = 1;
  uint32 limit = 2;
}

message EntryContent {
  string content = 1;
  int32 char_offset = 2;
  uint32 total_length = 3;
}

message PictureContent {
  string src = 1;
  string alt = 2;
  int32 pic_index = 3;
}

message Keyword {
  string name = 1;
}

message KeywordsContent {
  repeated Keyword keywords = 1;
}
